// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactDetail renders correctly with icon & url 1`] = `
<div
  className="flex group p-2"
>
  <a
    className="u-url where-is-he-now where-did-he-go"
    href="https://myspace.tk/tom"
    rel="me external"
  >
    <div
      className="motion-safe:group-hover:animate-pulse inline-block"
    >
      <svg
        aria-hidden={true}
        className="inline"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM7 12C7 14.7614 9.23858 17 12 17C14.7614 17 17 14.7614 17 12H15C15 13.6569 13.6569 15 12 15C10.3431 15 9 13.6569 9 12H7Z"
        />
      </svg>
    </div>
    <span
      className="pl-1"
    >
      MySpace
    </span>
  </a>
</div>
`;

exports[`ContactDetail renders correctly with icon but without url 1`] = `
<div
  className="flex group p-2"
>
  <span
    className="u-url where-is-he-now where-did-he-go"
  >
    <div
      className="motion-safe:group-hover:animate-pulse inline-block"
    >
      <svg
        aria-hidden={true}
        className="inline"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM7 12C7 14.7614 9.23858 17 12 17C14.7614 17 17 14.7614 17 12H15C15 13.6569 13.6569 15 12 15C10.3431 15 9 13.6569 9 12H7Z"
        />
      </svg>
    </div>
    <span
      className="pl-1"
    >
      MySpace
    </span>
  </span>
</div>
`;

exports[`ContactDetail renders correctly without icon and without url 1`] = `
<div
  className="flex group p-2"
>
  <span
    className="u-url where-is-he-now where-did-he-go"
  >
    <span
      className=""
    >
      MySpace
    </span>
  </span>
</div>
`;

exports[`ContactDetail renders correctly without icon but with url 1`] = `
<div
  className="flex group p-2"
>
  <a
    className="u-url where-is-he-now where-did-he-go"
    href="https://myspace.tk/tom"
    rel="me external"
  >
    <span
      className=""
    >
      MySpace
    </span>
  </a>
</div>
`;
